--- a/src/styles/Card.css
+++ b/src/styles/Card.css
@@ -15,7 +15,8 @@
     gap: 0.75rem;
   
     padding: 1rem;
-    width: 14rem;
+    /* width: 14rem; */
+
     /* background-color: var(--bg-card); */
   
     border-radius: 1rem;
@@ -29,7 +30,7 @@
     z-index: 5;
   
     width: 100%;
-    height: 8rem;
+    /* height: 8rem; */
     /* background-color: var(--primary-800); */
   
     border-radius: 0.5rem;
@@ -50,7 +51,7 @@
   
     width: 100%;
   
-    font-size: 1rem;
+    /* font-size: 1rem; */
     font-weight: 600;
     /* color: var(--light); */
     text-transform: capitalize;
